# slurm

./: configure  configure.ac
src/common/: slurm_opt.c
src/plugins/job_submit/: Makefile.am  Makefile.in
src/plugins/job_submit/eco/: Makefile.am  Makefile.in  job_submit_eco.c
src/plugins/launch/: Makefile.am
src/plugins/launch/eco/: Makefile.am  Makefile.in  launch_eco.c
